# kwin-effects-glass

./: .gitignore  CMakeLists.txt  Messages.sh  README.md
docs/: configuration.md
nix/: package-x11.nix  package.nix
po/: kwin_effects_glass.pot
po/fr/: kwin_effects_glass.po
src/: CMakeLists.txt  blur.cpp  blur.h  blur.kcfg  blur.qrc  metadata.json  settings.cpp  settings.h
src/kcm/: CMakeLists.txt  about.html  blur_config.cpp  blur_config.qrc  blur_config.ui
src/shaders/: compat_core.glsl  compat_legacy.glsl  downsample.glsl  glass.glsl  noise.glsl  oklab.glsl  onscreen_rounded.frag  onscreen_rounded.glsl  onscreen_rounded_core.frag  onscreen_rounded_core.glsl  onscreen_rounded_vertex.glsl  roundedcorners.glsl  roundedcorners.glsl.rej  snells-glass.glsl  upsample.glsl  upsample_core.glsl  vertex.glsl
tools/: plasma-nested.sh
